--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,18 @@
         </profile>
 
         <profile>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>1.7</source>
+                            <target>1.7</target>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
             <id>regression</id>
             <build>
                 <plugins>
