remmove depndency testng

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
             <artifactId>json</artifactId>
             <version>20080701</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>RELEASE</version>
@@ -44,7 +44,7 @@
             <artifactId>testng</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <properties>
