--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,20 @@
     <groupId>com.sysco.qe</groupId>
     <artifactId>sysco_hcm_web</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
     <repositories>
         <repository>
             <id>qe.syscolab.repo.core</id>
